--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <nav>
     <ul>
       <li><a href="#home">Inicio</a></li>
-      <li><a href="caballero.html">Tienda</a></li>
+      <li><a href="ropa.html">Tienda</a></li>
       <li><a href="#about">Sobre nosotras</a></li>
       <li><a href="#contact">Contacto</a></li>
     </ul>
@@ -165,14 +165,31 @@
 <section class="productos-destacados">
   <h2>¡Colección Verano SS25!</h2>
   <div class="productos">
+    <!-- Ropa -->
     <div class="producto">
-      <h3><a href="ropa-caballero.html">Ropa Caballero</a></h3>
+      <h3><a href="ropa.html#caballero">Ropa Caballero</a></h3>
     </div>
     <div class="producto">
-      <h3><a href="ropa-senora.html">Ropa Señora</a></h3>
+      <h3><a href="ropa.html#senora">Ropa Señora</a></h3>
     </div>
     <div class="producto">
-      <h3><a href="ropa-nino.html">Ropa Niñ@</a></h3>
+      <h3><a href="ropa.html#nino">Ropa Niñ@</a></h3>
+    </div>
+    
+    <!-- Calzado -->
+    <div class="producto">
+      <h3><a href="calzado.html#caballero">Calzado Caballero</a></h3>
+    </div>
+
+    <!-- Ropa Interior -->
+    <div class="producto">
+      <h3><a href="ropa-interior.html#caballero">Ropa Interior Caballero</a></h3>
+    </div>
+    <div class="producto">
+      <h3><a href="ropa-interior.html#senora">Ropa Interior Señora</a></h3>
+    </div>
+    <div class="producto">
+      <h3><a href="ropa-interior.html#nino">Ropa Interior Niñ@</a></h3>
     </div>
   </div>
 </section>
