--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       padding: 0;
     }
 
+    nav li {
+      position: relative;
+    }
+
     nav a {
       color: white;
       text-decoration: none;
@@ -53,6 +57,34 @@
 
     nav a:hover {
       color: #d1c0d0;
+    }
+
+    /* Menú desplegable */
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #5A3D57;
+      min-width: 160px;
+      z-index: 1;
+      border-radius: 5px;
+      top: 100%;
+      left: 0;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .dropdown-content a {
+      padding: 12px 16px;
+      display: block;
+      color: white;
+      text-decoration: none;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #402A3C;
+    }
+
+    nav li:hover .dropdown-content {
+      display: block;
     }
 
     .carrito {
@@ -146,7 +178,14 @@
   <nav>
     <ul>
       <li><a href="#home">Inicio</a></li>
-      <li><a href="ropa.html">Tienda</a></li>
+      <li>
+        <a href="#">Tienda</a>
+        <div class="dropdown-content">
+          <a href="ropa.html">Ropa</a>
+          <a href="calzado.html">Calzado</a>
+          <a href="ropa-interior.html">Ropa Interior</a>
+        </div>
+      </li>
       <li><a href="#about">Sobre nosotras</a></li>
       <li><a href="#contact">Contacto</a></li>
     </ul>
@@ -165,7 +204,6 @@
 <section class="productos-destacados">
   <h2>¡Colección Verano SS25!</h2>
   <div class="productos">
-    <!-- Ropa -->
     <div class="producto">
       <h3><a href="ropa.html#caballero">Ropa Caballero</a></h3>
     </div>
@@ -176,12 +214,10 @@
       <h3><a href="ropa.html#nino">Ropa Niñ@</a></h3>
     </div>
     
-    <!-- Calzado -->
     <div class="producto">
       <h3><a href="calzado.html#caballero">Calzado Caballero</a></h3>
     </div>
 
-    <!-- Ropa Interior -->
     <div class="producto">
       <h3><a href="ropa-interior.html#caballero">Ropa Interior Caballero</a></h3>
     </div>
