--- a/ropa-nino.html
+++ b/ropa-nino.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ropa - Niñ@ | Amitges by Reyes & Yoli</title>
+  <title>Ropa Niñ@ | Amitges by Reyes & Yoli</title>
   <style>
     body {
       font-family: 'Georgia', serif;
@@ -119,31 +119,32 @@
       <li><a href="ropa-senora.html">Ropa - Señora</a></li>
       <li><a href="ropa-caballero.html">Ropa - Caballero</a></li>
       <li><a href="ropa-nino.html">Ropa - Niñ@</a></li>
+      <li><a href="ropa-interior.html">Ropa - Interior</a></li>
       <li><a href="#about">Sobre nosotras</a></li>
       <li><a href="#contact">Contacto</a></li>
     </ul>
   </nav>
 </header>
 
-<!-- Productos Ropa - Niñ@ -->
+<!-- Productos Ropa Niñ@ -->
 <section class="productos-destacados">
   <h2>Ropa - Niñ@</h2>
   <div class="productos">
     <div class="producto">
-      <img src="producto1-nino.jpg" alt="Producto 1">
-      <h3>Camiseta Infantil</h3>
+      <img src="producto-nino1.jpg" alt="Producto 1">
+      <h3>Conjunto Infantil</h3>
       <button>Agregar al carrito</button>
     </div>
 
     <div class="producto">
-      <img src="producto2-nino.jpg" alt="Producto 2">
-      <h3>Pantalón Corto</h3>
+      <img src="producto-nino2.jpg" alt="Producto 2">
+      <h3>Camiseta de Niñ@</h3>
       <button>Agregar al carrito</button>
     </div>
 
     <div class="producto">
-      <img src="producto3-nino.jpg" alt="Producto 3">
-      <h3>Vestido de Niña</h3>
+      <img src="producto-nino3.jpg" alt="Producto 3">
+      <h3>Falda de Niña</h3>
       <button>Agregar al carrito</button>
     </div>
   </div>
