--- a/ropa-interior-caballero.html
+++ b/ropa-interior-caballero.html
@@ -110,50 +110,4 @@
 <!-- Header -->
 <header>
   <div class="logo">
-    <img src="logo-amitges.png" alt="Logo Amitges">
-    <span class="nombre-logo">Amitges by Reyes & Yoli</span>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="ropa-senora.html">Ropa - Señora</a></li>
-      <li><a href="ropa-caballero.html">Ropa - Caballero</a></li>
-      <li><a href="ropa-nino.html">Ropa - Niñ@</a></li>
-      <li><a href="ropa-interior-caballero.html">Ropa Interior - Caballero</a></li>
-      <li><a href="#about">Sobre nosotras</a></li>
-      <li><a href="#contact">Contacto</a></li>
-    </ul>
-  </nav>
-</header>
-
-<!-- Productos Ropa Interior - Caballero -->
-<section class="productos-destacados">
-  <h2>Ropa Interior - Caballero</h2>
-  <div class="productos">
-    <div class="producto">
-      <img src="producto1-ropa-interior-caballero.jpg" alt="Producto 1 Ropa Interior Caballero">
-      <h3>Bóxers Algodón</h3>
-      <button>Agregar al carrito</button>
-    </div>
-
-    <div class="producto">
-      <img src="producto2-ropa-interior-caballero.jpg" alt="Producto 2 Ropa Interior Caballero">
-      <h3>Camiseta Interior</h3>
-      <button>Agregar al carrito</button>
-    </div>
-
-    <div class="producto">
-      <img src="producto3-ropa-interior-caballero.jpg" alt="Producto 3 Ropa Interior Caballero">
-      <h3>Conjunto de Bóxers</h3>
-      <button>Agregar al carrito</button>
-    </div>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer>
-  <p>&copy; 2025 Amitges by Reyes & Yoli. Todos los derechos reservados.</p>
-</footer>
-
-</body>
-</html>
+    <img src="logo-amitges.png"
